--- a/index.html
+++ b/index.html
@@ -20,20 +20,30 @@
 </head>
 <body>
 
-	<div class="card">
-		Victor Crest
-		26
-		London
+	<main>
 
-		80K
-		Followers
+		<div class="card">
 
-		803K
-		Likes
+			<div class="info">
+				Victor Crest
+				26
+				London
+			</div>
 
-		1.4K
-		Photos
-	</div>
+			<div class="stats">
+				80K
+				Followers
+
+				803K
+				Likes
+
+				1.4K
+				Photos
+			</div>
+
+		</div>
+
+	</main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
