positioned various elements

--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
 
 		<div class="card">
 
+			<div class="circle">
+				<img src="./images/image-victor.jpg" class="profile-picture">
+			</div>
+			
 			<div class="info">
-				Victor Crest
-				26
-				London
+				<p> <span class="bold">Victor Crest</span>   26</p>
+				<p>London</p>
+				
 			</div>
 
 			<div class="stats">
-				80K
-				Followers
+				<p class="bold">80K</p>
+				<p>Followers</p>
 
-				803K
-				Likes
+				<p class="bold">803K</p>
+				<p>Likes</p>
 
-				1.4K
-				Photos
+				<p class="bold">1.4K</p>
+				<p>Photos</p>
+
 			</div>
 
 		</div>
