--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="card">
 
 			<div class="circle">
-				<img src="./images/image-victor.jpg" class="profile-picture">
+				<img src="./images/image-victor.jpg" class="profile-picture" alt="Victor's Profile Picture">
 			</div>
 			
 			<div class="info">
@@ -52,8 +52,8 @@
 
 	</main>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/laip/" target="_blank">Lai Patel</a>.
+		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
+		<p>Coded by <a href="https://www.linkedin.com/in/laip/" target="_blank">Lai Patel</a>.</p>
   </div>
 </body>
 </html>
