--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 	</main>
   <div class="attribution">
-		<p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-		<p>Coded by <a href="https://www.linkedin.com/in/laip/" target="_blank">Lai Patel</a>.</p>
+		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+		Coded by <a href="https://www.linkedin.com/in/laip/" target="_blank">Lai Patel</a>.
   </div>
 </body>
 </html>
